[gd_scene load_steps=7 format=3 uid="uid://d2d47b2cnkgpe"]

[ext_resource type="Script" path="res://Scripts/Components/dungeon.gd" id="1_1cw3m"]
[ext_resource type="Texture2D" uid="uid://cd0ofn54ulsx6" path="res://Ressources/Sprite/Building/dungeon.png" id="1_wo26d"]
[ext_resource type="Texture2D" uid="uid://droqm4cb2uyj8" path="res://Ressources/Sprite/Building/dungeon_border.png" id="2_y53fr"]
[ext_resource type="Texture2D" uid="uid://bla1xog3iqvka" path="res://Ressources/Sprite/UI/Buttons/button_stats.png" id="4_6meqn"]
[ext_resource type="Texture2D" uid="uid://dtygls2ucnigf" path="res://Ressources/Sprite/UI/Buttons/button_stats_pressed.png" id="5_qfsbl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pr3c8"]
size = Vector2(54.6154, 59.6154)

[node name="Dungeon" type="Area2D" groups=["building", "selectable"]]
texture_filter = 1
scale = Vector2(1.3, 1.3)
script = ExtResource("1_1cw3m")

[node name="DungeonSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_wo26d")

[node name="DungeonBorder" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(2, 2)
texture = ExtResource("2_y53fr")

[node name="DungeonCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_pr3c8")

[node name="DungeonButtonContainer" type="HBoxContainer" parent="."]
offset_left = -16.0
offset_top = 55.0
offset_right = 16.0
offset_bottom = 87.0

[node name="ExploreButton" type="TextureButton" parent="DungeonButtonContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_6meqn")
texture_pressed = ExtResource("5_qfsbl")

[node name="DungeonParticipantCount" type="Label" parent="."]
offset_left = -20.0
offset_top = -78.0
offset_right = 20.0
offset_bottom = -55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1 / 3"
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="DungeonButtonContainer/ExploreButton" to="." method="_on_explore_button_pressed"]
